--- a/style/template.css
+++ b/style/template.css
@@ -1,21 +1,22 @@
-.article-card{
+.article-card {
   width: 220px;
   background: #fff;
   border-radius: 20px;
   border: 5px solid #fff;
   overflow: hidden;
   color: var(--color-text);
-  box-shadow: rgba(0, 0, 0, 0.584) 0px 10px 20px,
-              rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow:
+    rgba(0, 0, 0, 0.584) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
   cursor: pointer;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-.article-card:hover{
+.article-card:hover {
   transform: scale(1.05);
 }
 
-.article-main-content{
+.article-main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,15 +24,12 @@
   margin: 0 auto;
 }
 
-
-.article-card-title{
+.article-card-title {
   text-align: center;
   text-transform: uppercase;
   font-size: 14px;
   margin-top: 10px;
   margin-bottom: 20px;
-
-  
 }
 
 .article-card-Image {
@@ -44,52 +42,47 @@
 }
 
 .pokemon-image {
- height: 120px;
- object-fit: cover;
- filter: drop-shadow(0px 0px 4px #030303b3);
+  height: 120px;
+  object-fit: cover;
+  filter: drop-shadow(0px 0px 4px #030303b3);
 }
-.pokemon-image:hover{
-filter: drop-shadow(0px 0px 4px #030303);
-
+.pokemon-image:hover {
+  filter: drop-shadow(0px 0px 4px #030303);
 }
-.pokemon-type-icon_2{
-   position: absolute; 
-  top: 58px;         
-  right: 15px;      
-  width: 40px;        
+.pokemon-type-icon_2 {
+  position: absolute;
+  top: 58px;
+  right: 15px;
+  width: 40px;
   height: 40px;
-   filter: drop-shadow(0px 0px 4px #030303b3);
-
+  filter: drop-shadow(0px 0px 4px #030303b3);
 }
 .pokemon-type-icon {
-  position: absolute; 
-  top: 10px;         
-  right: 15px;      
-  width: 40px;        
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
   height: 40px;
-   filter: drop-shadow(0px 0px 4px #030303b3);
-
+  filter: drop-shadow(0px 0px 4px #030303b3);
 }
 .article-card-Image img:last-child {
-  position: absolute; 
-  top: 10px;         
-  right: 10px;      
-  width: 30px;        
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
   height: 30px;
-   filter: drop-shadow(0px 0px 4px #030303b3);
-
+  filter: drop-shadow(0px 0px 4px #030303b3);
 }
 
-.article-card-Image span{
-  position: absolute; 
-  top: 10px;         
-  left: 10px;    
-  color: white;  
+.article-card-Image span {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
   font-size: 18px;
   font-weight: 600;
-
 }
-.not_found{
+.not_found {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,23 +90,23 @@ filter: drop-shadow(0px 0px 4px #030303);
   width: 380px;
   height: 200px;
 }
-.not_found img{
+.not_found img {
   height: 40px;
 }
 
-.article-card-dialog{
-   width: 420px;
-   height: 600px;
+.article-card-dialog {
+  width: 420px;
+  height: 600px;
   background: #fff;
   border-radius: 20px;
   border: 5px solid #fff;
   overflow: hidden;
   color: var(--color-text);
-  box-shadow: rgba(0, 0, 0, 0.584) 0px 10px 20px,
-              rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow:
+    rgba(0, 0, 0, 0.584) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
   cursor: pointer;
-  transition: all .2s ease-in-out;
-  
+  transition: all 0.2s ease-in-out;
 }
 .article-card-Image-dialog {
   display: grid;
@@ -124,33 +117,31 @@ filter: drop-shadow(0px 0px 4px #030303);
   overflow: hidden;
 }
 .pokemon-span-dialog {
-position: absolute; 
-  top: 10px;         
-  right: 10px;    
-  color: white;  
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
   font-size: 18px;
   font-weight: 600;
 }
 
-
-.pokemon-image-dialog{
-   height: 220px;
- object-fit: cover;
- filter: drop-shadow(0px 0px 4px #030303b3);
+.pokemon-image-dialog {
+  height: 220px;
+  object-fit: cover;
+  filter: drop-shadow(0px 0px 4px #030303b3);
 }
 
-.article-card-Image-dialog span{
-  position: absolute; 
-  top: 10px;         
-  left: 15px;    
-  color: white;  
+.article-card-Image-dialog span {
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  color: white;
   font-size: 28px;
   font-weight: 600;
-
 }
-.pokemon-type-icon-dialog{
+.pokemon-type-icon-dialog {
   height: 30px;
-   border: none;
+  border: none;
   border-radius: 100px;
   padding: 5px 30px;
   color: #fff;
@@ -158,7 +149,7 @@ position: absolute;
   text-transform: uppercase;
 }
 
-.card-content{
+.card-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -166,47 +157,40 @@ position: absolute;
   margin: 0 auto;
 }
 
-.tab-bar{
+.tab-bar {
   display: flex;
   justify-content: center;
 }
 
-.tab-button{
+.tab-button {
   width: 100px;
   height: 30px;
   margin-bottom: 30px;
   border: none;
- 
-  
-  
 }
-.tab-button:active{
+.tab-button:active {
   border-bottom: 4px solid var(--type-color);
-
-
-
 }
-.tab-button:hover{
+.tab-button:hover {
   border-bottom: 4px solid var(--type-color);
 }
 
-.progress-container{
+.progress-container {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 5px;
   gap: 30px;
-  
 }
-.progress{
+.progress {
   display: flex;
   width: 200px;
   background-color: rgba(172, 172, 172, 0.571);
   border-radius: 15px;
   height: 15px;
 }
-.progress-bar{
+.progress-bar {
   display: flex;
   justify-content: center;
   height: 15px;
@@ -214,32 +198,31 @@ position: absolute;
   border-radius: 15px;
   margin-bottom: 20px;
   font-size: 12px;
-  color:black;
- 
+  color: black;
 }
-.name{
+.name {
   display: flex;
   flex-direction: column;
   width: 350px;
-  padding-right:22px;
+  padding-right: 22px;
 }
 
 .card-text {
-  width: 80px;   
+  width: 80px;
   text-align: left;
   font-size: 14px;
   flex-shrink: 0;
 }
-.about{
+.about {
   display: flex;
   margin-bottom: 10px;
   gap: 30px;
   padding-left: 5px;
   font-size: 14px;
 }
-.about-span:first-child{
+.about-span:first-child {
   margin-left: -4px;
 }
-.about-span-last{
+.about-span-last {
   padding-left: 13px;
 }
